--- a/style.css
+++ b/style.css
@@ -250,6 +250,32 @@ section {
   color: var(--Very-dark-blue);
 }
 
+/* .box-d {
+  IN THE END
+  overflow: hidden;
+} */
+
+/* .box {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 50rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  THIS creates the animation!
+  transition: transform 1s;
+} */
+
+/* .slide > img {
+  Only for images that have different size than slide
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+
 .box-c {
   display: flex;
   flex-direction: column;
@@ -357,6 +383,10 @@ section {
   font-weight: 700;
   color: var(--Dark-grayish-blue);
   text-align: center;
+}
+
+.cart-checkout-body {
+  display: none;
 }
 
 .cart-checkout {
